[metadata]
name = PDStoolkit
version = 0.0.2
author = Ankur Kumar
author_email = MLforPSE@gmail.com
description = A Python package to facilitate building process data science solutions including process modeling, monitoring, fault diagnosis, etc.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mlforpse.com/intro-to-pdstoolkit-python-package/
project_urls = 
    Source Code: = https://github.com/ML-PSE/PDStoolkit-Python-Package
	
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src